# ChangeLog for dev-libs/dbus-qt3-old
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbus-qt3-old/ChangeLog,v 1.15 2009/01/13 15:24:14 cardoe Exp $

  15 Jan 2010; Serghei Amelian <serghei@gentoo.org>
  dbus-qt3-old-0.70.ebuild:
  dbus-qt3-old-0.70 was slotted

  13 Jan 2009; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  gentopia is becoming freedesktop

  18 Aug 2008; Robert Buchholz <rbu@gentoo.org> dbus-qt3-old-0.70.ebuild:
  Fix HOMEPAGE

  07 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> dbus-qt3-old-0.70.ebuild:
  Keyword ~mips.

  25 May 2007; Steve Dibb <beandog@gentoo.org> dbus-qt3-old-0.70.ebuild:
  Add ~x86-fbsd

  09 Feb 2007; Bryan Østergaard <kloeri@gentoo.org>
  dbus-qt3-old-0.70.ebuild:
  Stable on Alpha + IA64, bug 162879.

  29 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  dbus-qt3-old-0.70.ebuild:
  Stable on sparc wrt #162879

  23 Jan 2007; Jeroen Roovers <jer@gentoo.org> dbus-qt3-old-0.70.ebuild:
  Stable for HPPA (bug #162879).

  22 Jan 2007; Olivier Crête <tester@gentoo.org> dbus-qt3-old-0.70.ebuild:
  Stable on amd64 per bug #162879

  21 Jan 2007; Andrej Kacian <ticho@gentoo.org> dbus-qt3-old-0.70.ebuild:
  Stable on x86, bug #162879.

  21 Jan 2007; Markus Rothe <corsair@gentoo.org> dbus-qt3-old-0.70.ebuild:
  Stable on ppc64; bug #162879

  21 Jan 2007; nixnut <nixnut@gentoo.org> dbus-qt3-old-0.70.ebuild:
  Stable on ppc wrt bug 162879

  05 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  dbus-qt3-old-0.70.ebuild:
  add the debug useflag

  19 Dec 2006; Doug Goldstein <cardoe@gentoo.org> dbus-qt3-old-0.70.ebuild:
  Set the moc path explicitly since the configure script is grabbing the 4.x
  series one sometimes

  30 Oct 2006; Steev Klimaszewski <steev@gentoo.org>
  dbus-qt3-old-0.70.ebuild:
  Update the dependency to dbus instead of dbus-core

*dbus-qt3-old-0.70 (20 Aug 2006)

  20 Aug 2006; Stefan Schweizer <genstef@gentoo.org> +metadata.xml,