@@ -1,4 +1,6 @@
+DIST dbus-1-qt3-0.9.tar.gz 450432 RMD160 4948475ebd361b91246d0a97ed1d08947b3396e4 SHA1 333f608c585e423d4b19d800d25a0081d03c4408 SHA256 45b0698da89627b49dc1ee66d2819c23eaec82316ef1316b8deeeb3d41a00e01
 DIST dbus-qt3-0.70.tar.bz2 220305 RMD160 8e2e3919ea71d50966000239e435b41ead089b1b SHA1 d87cfd7af62d36cc98f0a01f3d7e66eb677b081a SHA256 d86531f106f8172a635d57ef35b7856cb54885c50f175bd1bff374c0e5a5f5ed
 EBUILD dbus-qt3-old-0.70-r1.ebuild 887 RMD160 63bf1fc19a4d06b5954d41b8ef2fc10e38c628dd SHA1 9468fc61f62ebb93dd0483c9b79c079b2a692e72 SHA256 fb005a9d3b718a98a66506427cdc73f8260cb5aa02da1a5d77bffc7a33e1a47f
-MISC ChangeLog 2089 RMD160 d19810894632bb5ee25ec72bed0a990dc266c15f SHA1 1fcc7ef93229ce382e6d607ac1af109807b2498e SHA256 79647d4d9e5b01cd964d1e9dd9586c9c40a4cd16bee8130f2dc9ecbeb86be372
+EBUILD dbus-qt3-old-0.9.ebuild 735 RMD160 03e300334cb9219502394b37349e8aab70b1b857 SHA1 d9daa9eba7cb6cf4b54d183282daf3f538eca20b SHA256 7fadbf77de6afe4781e4d399ad4e70c76bcac4fccdf3eedf11c13299416a617c
+MISC ChangeLog 2260 RMD160 881d74234e3fd66429d98637245d7abceb6cbe67 SHA1 1184b270e9ed3b2b12cbb8ef06e437a78480816b SHA256 831e754bcea494026ac08f628ac0e3379ca7d4909918332c9ce6af1a2b7db412
 MISC metadata.xml 164 RMD160 7d567afe05ca87a772eedf19f5b1fd1e2a9798a7 SHA1 e7b1ab05868d9feb1fa1677c052836fd7dd6a171 SHA256 66cdaff449660e99dfaee8d19b47413fc8ced6d5a1eccd3c842a48e9d9668d48
