@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/dbus-qt3-old/ChangeLog,v 1.15 2009/01/13 15:24:14 cardoe Exp $
 
+*dbus-qt3-old-0.9 (16 Jan 2010)
+
+  16 Jan 2010; Serghei Amelian <serghei@gentoo.org>
+  +dbus-qt3-old-0.9.ebuild:
+  Added 0.9 version, a QT3 backport of the Qt 4 bindings
+
   15 Jan 2010; Serghei Amelian <serghei@gentoo.org>
   dbus-qt3-old-0.70.ebuild:
   dbus-qt3-old-0.70 was slotted
